@@ -1,0 +1,12 @@
+
+#General settings for the mod.
+[general]
+	#Should descriptions only be shown on enchanted books?
+	onlyEnchantedBooks = true
+	#Should new/blank lines be added between enchantments?
+	addNewLines = true
+	#Should the mod that owns the enchantment be displayed?
+	showOwner = true
+	#Should players be required to press a keybind in order to see the descriptions?
+	requireKeybind = true
+
