@@ -1,20 +1,0 @@
-
-[towers]
-	#A list of biomes where the towers will not spawn. Default: Rivers, Beaches
-	biomeBlackList = ["minecraft:river", "minecraft:frozen_river", "minecraft:beach", "minecraft:stone_shore", "minecraft:snowy_beach", "biomesoplenty:gravel_beach", "biomesoplenty:white_beach"]
-	#Make towers spawn in the ocean. Default: true
-	spawnOceanTowers = true
-	#If the Waytones mod is installed and this is set to true, towers will spawn with a waystone at the top. If the Waystone mod is not installed, this will have no effect. Default: true
-	waystonesCompat = true
-	#A list of mod ids. In each and every biome added by those mods, the towers will not spawn. Default : The Midnight.
-	allModBiomesBlackList = ["midnight", "the_bumblezone"]
-	#How rarely the towers will spawn (low: common, high: rare). Default: 20
-	#Range: 3 ~ 200
-	towerRarity = 20
-	#How rarely the derelict towers will spawn (low: common, high: rare). Default: 72
-	#Range: 3 ~ 200
-	derelictTowerRarity = 72
-	#How rarely the ocean towers will spawn (low: common, high: rare). Default: 32
-	#Range: 3 ~ 200
-	oceanTowerRarity = 32
-
